[gd_scene load_steps=4 format=3 uid="uid://db1elk11vi3ym"]

[ext_resource type="Script" path="res://Inventory/inv_slot.gd" id="1_n0vvm"]
[ext_resource type="Texture2D" uid="uid://bpintlug43u32" path="res://Inventory/soundgun.png" id="2_cidwv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u6cw"]
bg_color = Color(0.718948, 0.587027, 0, 0.309804)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="inv_slot" type="Panel"]
custom_minimum_size = Vector2(16, 16)
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = -8.064
offset_top = -7.776
offset_right = 7.936
offset_bottom = 8.224
theme_override_styles/panel = SubResource("StyleBoxFlat_0u6cw")
script = ExtResource("1_n0vvm")

[node name="item_display" type="Sprite2D" parent="."]
position = Vector2(8, 8)
scale = Vector2(0.0136719, 0.0136719)
texture = ExtResource("2_cidwv")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
